Fixed content and scrollbar

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -28,15 +28,9 @@ body {
   background-attachment: fixed;
   background-size: cover;
   display: flex;
-  flex-direction: column;
   justify-content: center;
+  align-items: center;
   z-index: -5;
-}
-
-.container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
 }
 
 .content {
@@ -45,17 +39,32 @@ body {
   max-height: 30rem;
   width: 45rem;
   height: 30rem;
+  min-width: 45rem;
+  min-height: 30rem;
   border-radius: 5px;
   backdrop-filter: "blur(10px)";
   -webkit-backdrop-filter: "blur(10px)";
   background-color: rgba(255, 255, 255, 0.3);
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: column;
+}
+
+.console-container {
   flex: 1;
+  overflow-y: auto;
+}
+
+.console-item-container {
+  height: auto;
+  min-height: 100%;
+  display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  overflow-y: scroll;
 }
 
 .shell {
+  flex-basis: auto;
   margin-top: 0px;
   margin-bottom: 5px;
   margin-left: 7px;
@@ -78,9 +87,27 @@ select:focus {
 }
 
 .historyItem {
+  flex-basis: auto;
   font-size: .85rem;
   font-family: monaco;
   margin-top: 0px;
   margin-bottom: 3px;
   margin-left: 7px;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
